manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: simple-go
  name: simple-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-go
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: simple-go
    spec:
      containers:
      - image: docker.io/rishabh1234/simple-go:9a9a4165964bf5692f0d194379d7458f2c56da73
        name: simple-go
        resources: {}
status: {}
