manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: simple-go
  namespace: test
spec:
  host: test-simplego.apps.rishabhrdu.lab.upshift.rdu2.redhat.com
  to:
    kind: Service
    name: simple-go
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
